# 4156-Miniproject-2024-Students-Cplusplus

./: README.md  bugs.txt  citations.txt  cppcheck-result.txt  honesty.txt
IndividualMiniprojectC++/: CMakeLists.txt
IndividualMiniprojectC++/src/: Course.cpp  Department.cpp  Globals.cpp  MyApp.cpp  MyFileDatabase.cpp  RouteController.cpp  main.cpp
IndividualMiniprojectC++/test/: CourseUnitTests.cpp  DepartmentUnitTests.cpp  MyAppUnitTests.cpp  MyFileDatabaseUnitTests.cpp  RouteControllerUnitTests.cpp  sample.cpp
